Ibis library integration w/ prerendering

--- a/SparcWeb/Pages/ProjectsList.razor
+++ b/SparcWeb/Pages/ProjectsList.razor
@@ -81,7 +81,7 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (firstRender)
-            await Ibis.TranslatePageAsync("sparc-projects-list");
+        //if (firstRender)
+            //await Ibis.TranslatePageAsync("sparc-projects-list");
     }
 }
