--- a/SparcWeb/_Imports.razor
+++ b/SparcWeb/_Imports.razor
@@ -18,9 +18,9 @@
 @using SparcWeb
 @using SparcWeb.Pages
 @using SparcWeb.Shared
+@using Sparc.Ibis;
 
 @inject IJSRuntime JSRuntime
 @inject NavigationManager Nav
-@inject IbisContentProvider Ibis
-
+@inject IbisTranslator Ibis
 @attribute [AllowAnonymous]
