--- a/SparcWeb/Shared/MainLayout.razor
+++ b/SparcWeb/Shared/MainLayout.razor
@@ -1,8 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <NavMenu/>
-    <main>
-        @Body
-    </main>
-</div>
+<IbisTranslate ChannelId="sparc-landing-page">
+    <div class="page">
+        <NavMenu />
+        <main>
+            @Body
+        </main>
+    </div>
+</IbisTranslate>
