--- a/SparcWeb/wwwroot/Styles/Page/Blog.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Blog.scss
@@ -4,10 +4,6 @@
     }
 
     .blog {
-        .title {
-            text-align: center;
-            margin-bottom: 50px;
-        }
 
         .posted {
             margin-bottom: 40px;
@@ -17,6 +13,7 @@
 
             p {
                 color: var(--primary-500);
+                font-size: 18px;
             }
         }
 
@@ -29,23 +26,16 @@
             }
         }
 
-        &-content {
+        p {
+            font-size: 20px;
+            line-height: 130%;
+            padding: 20px 0;
+        }
 
-            p {
-                font-size: 24px;
-                line-height: 130%;
-            }
-
-            div {
-                text-align: center;
-                margin-top: 80px;
-
-                button {
-                    background: var(--grey-900);
-                    color: white;
-                    border-radius: 100px;
-                }
-            }
+        &--title p {
+            text-align: center;
+            font-size: 68px;
+            font-weight: 500;           
         }
     }
 }
