Upgrade to Blossom

--- a/SparcFeatures/Pages/_Host.cshtml
+++ b/SparcFeatures/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using SparcWeb
+@using Sparc.UI
 
 <!DOCTYPE html>
 <html>
@@ -13,7 +13,7 @@
 </head>
 <body>
     <app>
-        <component type="typeof(SparcWeb.App)" render-mode="WebAssemblyPrerendered" />
+        <component type="typeof(Sparc.UI.App)" render-mode="WebAssemblyPrerendered" />
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
