--- a/SparcWeb/_Imports.razor
+++ b/SparcWeb/_Imports.razor
@@ -13,11 +13,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 
-@using Sparc.Notifications.Twilio;
 @using Sparc.Core
-@using SparcWeb
-@using SparcWeb.Pages
-@using SparcWeb.Shared
+@using Sparc.UI
+@using Sparc.UI.Pages
+@using Sparc.UI.Shared
 @using Sparc.Ibis;
 
 @inject IJSRuntime JSRuntime
