Refactoring and styling updates for responsiveness

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -5,21 +5,15 @@
     <section class="home-hero">
         <div class="container">
             <div class="header center">
-                <h1>Striving for a world where <span class="invert">startups</span> are owned by those who <span class="invert">built it</span></h1>
+                <h1>
+                    Striving for a world where 
+                    <span class="invert">startups</span> 
+                    are owned by those who 
+                    <span class="invert">built it</span>
+                </h1>
                 <p class="subtitle-1">We are building a community of individuals & organisations who believe there is a better way to fund, build and reward startups.</p>
             </div>
             <div class="cta-box">
-                <div class="profile-pics-wrapper mobile">
-                    <div class="profile-pic">
-                        <img src="images/Picture.png" />
-                    </div>
-                    <div class="profile-pic">
-                        <img src="images/Picture.png" />
-                    </div>
-                    <div class="profile-pic">
-                        <img src="images/Picture.png" />
-                    </div>
-                </div>
                 <div class="box-header">
                     <p class="subtitle-small">Join the Sparc community, and get access to a list of resources & guidance.</p>
                 </div>
