--- a/SparcWeb/Pages/Project.razor
+++ b/SparcWeb/Pages/Project.razor
@@ -39,9 +39,9 @@
 @*                                    <p class="title-2 semi-bold">[Title]</p>*@
                                     <p class="timeline-date subtitle-small">@post.Timestamp.ToString("M")</p>
                                 </div>
-                                <div class="timeline-content">
-                                    <p class="subtitle-small">@post</p>
-                                </div>
+                                <p class="timeline-content">
+                                    @post
+                                </p>
                             </div>
                         }
                     }
