--- a/SparcWeb/Shared/CommunityCta.razor
+++ b/SparcWeb/Shared/CommunityCta.razor
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="divider"></div>
-    <div class="community-card">
+    <div class="community-card right">
         <div class="sparc-badge">
             <img src="/images/sparc-approved-badge-2x 1.png" />
         </div>
