--- a/SparcWeb/wwwroot/Styles/Global/_communitycta.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_communitycta.scss
@@ -88,92 +88,83 @@
         font-family: 'NeueHaasDisplayMedium';
     }
 
+    @media only screen and (max-width: 1340px) {
+        width: 80%;
+    }
+
 
     @media only screen and (max-width: 760px) {
         width: 100%;
-        padding-top: 70px;
-        padding-bottom: 40px;
+        padding: 40px 20px;
         text-align: center;
+        flex-wrap: wrap;
 
-        .container {
-            .card-wrapper {
+        .divider {
+            height: 1px;
+            width: 100%;
+        }
+
+        .community-card {
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            padding: 0 40px;
+            border-radius: 24px;
+            background: $yellow-100;
+
+            &.right {
+                .card-header {
+                    padding-top: 65px;
+                }
+            }
+
+            h6 {
+                font-size: 28px;
+                margin-top: 25px;
+            }
+
+            .card-header {
+                padding-top: 0;
+            }
+
+            p {
+                font-size: 20px;
+                line-height: 22px;
+            }
+
+            button {
                 width: 100%;
-                height: 100%;
-                margin: 0 auto;
-                flex-direction: column-reverse;
-                justify-content: space-between;
-                gap: 32px;
-                background: $white;
-                border-radius: 24px;
+                padding: 16px 17px;
+                font-family: 'NeueHaasDisplayMedium';
+                font-size: 16px;
+            }
 
-                .community-card {
+            .cta-flex {
+                margin-left: 8px;
+                justify-content: flex-start;
+
+                .profile-pics-wrapper {
                     width: 100%;
-                    height: 100%;
+                    justify-content: center;
+                }
+            }
+
+            .sparc-badge {
+                top: -16px;
+            }
+
+            .community-join {
+                input {
+                    text-align: left;
+                }
+
+                a {
                     margin: 0 auto;
-                    padding: 48px 40px;
-                    border-radius: 24px;
-                    background: $yellow-100;
-
-                    .card-header {
-                        padding-top: 0;
-                    }
-
-                    p {
-                        font-size: 20px;
-                        line-height: 22px;
-                    }
-
-                    button {
-                        width: 100%;
-                        padding: 16px 17px;
-                        font-family: 'NeueHaasDisplayMedium';
-                        font-size: 16px;
-                    }
-
-                    .cta-flex {
-                        margin-left: 8px;
-                        justify-content: flex-start;
-
-                        .profile-pics-wrapper {
-                            width: 100%;
-                            justify-content: center;
-                        }
-                    }
-
-                    &.badge {
-                        padding: 0 40px;
-                        padding-bottom: 48px;
-                        border-radius: 24px;
-
-                        .sparc-badge {
-                            position: absolute;
-                            text-align: center;
-                            top: 0;
-                            left: 50%;
-                            transform: translate(-50%,-50%);
-                        }
-                    }
-
-                    .community-signup {
-                        font-size: 16px;
-
-                        .community-join {
-                            flex-direction: column;
-
-                            input {
-                                width: 100%;
-                            }
-                        }
-
-                        p {
-                            font-size: 16px;
-                        }
-                    }
                 }
+            }
 
-                .divider {
-                    display: none;
-                }
+            .community-signup {
+                font-size: 16px;
             }
         }
     }
@@ -182,7 +173,7 @@
         width: 100%;
 
         .community-card {
-            padding: 48px 17px;
+            padding: 0 17px;
 
             p {
                 font-size: 16px;
@@ -193,9 +184,22 @@
                 padding: 16px 14px;
             }
 
-            &.badge {
-                padding: 48px 17px;
-                padding-top: 8px;
+            &.right {
+                .card-header {
+                    padding-top: 0;
+                }
+
+                h6 {
+                    margin-top: 0;
+                }
+            }
+
+            .sparc-badge {
+                position: relative;
+
+                img {
+                    height: 100px;
+                }
             }
 
             .community-signup {
