--- a/SparcWeb/wwwroot/Styles/Page/Blog.scss
+++ b/SparcWeb/wwwroot/Styles/Page/Blog.scss
@@ -1,4 +1,6 @@
-﻿.blog-page {
+﻿@import "../Global/_variables.scss";
+
+.blog-page {
     .container {
         max-width: 1024px;
     }
@@ -35,23 +37,32 @@
         &--title p {
             text-align: center;
             font-size: 68px;
-            font-weight: 500;           
+            font-weight: 500;
+        }
+    }
+
+    @media only screen and (max-width: 480px) {
+        .blog--title p {
+            font-size: 48px;
         }
     }
 }
 
 .blog-wrapper {
     display: flex;
-    justify-content: center;
+    max-width: 1216px;
     gap: 32px;
-    margin-top: 56px;
+    margin: 0 auto;
 
     .blog-card {
         width: 384px;
+        height: 350px;
         cursor: pointer;
 
         img {
             width: 100%;
+            height: 256px;
+            border-radius: 12px;
         }
 
         .blog-tags {
@@ -74,43 +85,25 @@
             font-size: 24px;
         }
     }
-}
 
-@media only screen and (max-width: 760px) {
-    .blog-wrapper {
+
+    @media only screen and (max-width: 760px) {
         width: 100%;
         padding-bottom: 15px;
         max-width: none;
         display: flex;
-        flex-wrap: nowrap;
-        flex-direction: row;
-        justify-content: normal;
-        gap: 32px;
-        overflow-x: scroll;
-        position: absolute;
-        left: 0;
+        flex-wrap: wrap;
 
         .blog-card {
-            width: 100%;
-
-            img {
-                width: 264px;
-            }
-
-            &:first-child {
-                margin-left: 40px;
-            }
-
-            &:last-child {
-                padding-right: 40px;
-            }
-
-            .blog-tags {
-                margin-top: 16px;
-            }
+            width: 80%;
+            margin: 0 auto;
 
             .subtitle-large {
                 font-size: 24px;
+            }
+
+            p {
+                text-align: left;
             }
         }
     }
