--- a/SparcFeatures/app.scss
+++ b/SparcFeatures/app.scss
@@ -1,15 +1,18 @@
-﻿@import "wwwroot/Styles/Global/_variables";
-@import "wwwroot/Styles/Global/_assets";
-@import "wwwroot/Styles/Global/_typography";
-@import "wwwroot/Styles/Global/_nav";
-@import "wwwroot/Styles/Global/_projectcard";
-@import "wwwroot/Styles/Global/_communitycta";
+﻿@import "App.Variables";
+@import "App.Assets";
 
-@import "wwwroot/Styles/Page/Index";
-@import "wwwroot/Styles/Page/ProjectList";
-@import "wwwroot/Styles/Page/Project";
-@import "wwwroot/Styles/Page/BlogList";
-@import "wwwroot/Styles/Page/Blog";
+@import "Shared/NavMenu";
+
+@import "Pages/Index";
+
+@import "Projects/ProjectsList";
+@import "Projects/Project";
+@import "Projects/ProjectCard";
+
+@import "Blog/BlogList";
+@import "Blog/Blog";
+
+@import "Community/CommunityCta";
 
 .ibis-translate {
     padding: 0;
