--- a/SparcFeatures/wwwroot/css/app.css
+++ b/SparcFeatures/wwwroot/css/app.css
@@ -1,121 +1,4 @@
-﻿.container {
-  max-width: 1480px;
-  margin: 0 auto;
-  padding: 0 40px;
-}
-
-section {
-  padding: 100px 0;
-}
-
-.section-tag {
-  padding: 10px 16px;
-  box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
-  font-style: italic;
-  max-width: fit-content;
-  margin-bottom: 32px;
-}
-
-.values-tag {
-  background: white;
-}
-.values-tag p {
-  color: var(--error-500);
-}
-
-.project-tag {
-  background: white;
-}
-.project-tag p {
-  color: var(--error-500);
-}
-
-.community-tag {
-  background: #EBF2FF;
-}
-.community-tag p {
-  color: var(--tertiary-500);
-}
-
-.resources-tag {
-  background: #FFECEB;
-}
-.resources-tag p {
-  color: var(--primary-500);
-  color: #FF756A;
-}
-
-.blog-tags {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  margin-bottom: 12px;
-}
-.blog-tags .tag {
-  border: 1px solid rgba(104, 105, 110, 0.5);
-  border-radius: 100px;
-  box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
-  color: var(--primary-900);
-  background: white;
-  font-weight: 400;
-}
-
-button {
-  background: var(--grey-900);
-  border-radius: 100px;
-  font-size: 16px;
-  font-style: italic;
-}
-
-.btn-large {
-  padding: 16px 32px;
-}
-
-.btn-small {
-  padding: 6px 14px;
-  box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
-  font-size: 14px;
-  line-height: 16px;
-}
-
-.cta-box {
-  padding: 24px 32px;
-  background: #FFB600;
-  border: 1px solid var(--grey-900);
-  border-radius: 24px;
-  max-height: 117px;
-  margin: 0 auto;
-}
-.cta-box .box-header {
-  margin-bottom: 16px;
-}
-
-.cta-flex {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.cta-flex .profile-pics-wrapper {
-  display: flex;
-}
-.cta-flex .profile-pic {
-  max-width: 40px;
-  max-height: 40px;
-  border-radius: 1000px;
-  margin-left: -10px;
-}
-.cta-flex button {
-  background: var(--grey-900);
-  border-radius: 100px;
-  font-size: 16px;
-  font-style: italic;
-}
-
-.hero-header {
-  background: #F2EDDF;
-}
-
-body {
+﻿body {
   font-family: "NeueHaasDisplayRoman";
   font-weight: 400;
   line-height: 120%;
@@ -315,6 +198,123 @@ body .bold {
   font-weight: 700;
   src: url(../fonts/IBMPlexSans-BoldItalic.ttf) format("truetype");
 }
+.container {
+  max-width: 1480px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+section {
+  padding: 100px 0;
+}
+
+.section-tag {
+  padding: 10px 16px;
+  box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
+  font-style: italic;
+  max-width: fit-content;
+  margin-bottom: 32px;
+}
+
+.values-tag {
+  background: white;
+}
+.values-tag p {
+  color: var(--error-500);
+}
+
+.project-tag {
+  background: white;
+}
+.project-tag p {
+  color: var(--error-500);
+}
+
+.community-tag {
+  background: #EBF2FF;
+}
+.community-tag p {
+  color: var(--tertiary-500);
+}
+
+.resources-tag {
+  background: #FFECEB;
+}
+.resources-tag p {
+  color: var(--primary-500);
+  color: #FF756A;
+}
+
+.blog-tags {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin-bottom: 12px;
+}
+.blog-tags .tag {
+  border: 1px solid rgba(104, 105, 110, 0.5);
+  border-radius: 100px;
+  box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
+  color: var(--primary-900);
+  background: white;
+  font-weight: 400;
+}
+
+button {
+  background: var(--grey-900);
+  border-radius: 100px;
+  font-size: 16px;
+  font-style: italic;
+}
+
+.btn-large {
+  padding: 16px 32px;
+}
+
+.btn-small {
+  padding: 6px 14px;
+  box-shadow: -10px 2px 4px rgba(16, 45, 71, 0.02);
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.cta-box {
+  padding: 24px 32px;
+  background: #FFB600;
+  border: 1px solid var(--grey-900);
+  border-radius: 24px;
+  max-height: 117px;
+  margin: 0 auto;
+}
+.cta-box .box-header {
+  margin-bottom: 16px;
+}
+
+.cta-flex {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.cta-flex .profile-pics-wrapper {
+  display: flex;
+}
+.cta-flex .profile-pic {
+  max-width: 40px;
+  max-height: 40px;
+  border-radius: 1000px;
+  margin-left: -10px;
+}
+.cta-flex button {
+  background: var(--grey-900);
+  border-radius: 100px;
+  font-size: 16px;
+  font-style: italic;
+}
+
+.hero-header {
+  background: #F2EDDF;
+}
+
 nav .nav-desktop {
   padding: 32px 48px;
   display: flex;
@@ -521,241 +521,6 @@ nav .nav-mobile {
   nav .nav-mobile .community-join button.join-community {
     background: #FF756A;
     border: none;
-  }
-}
-
-.project-card {
-  margin-bottom: 30px;
-  padding: 0px;
-  max-width: 100%;
-  width: 589px;
-  height: 516px;
-}
-.project-card .card-header {
-  height: 30px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 8px;
-  margin-top: 20px;
-}
-.project-card .card-header a {
-  cursor: pointer;
-}
-.project-card .btn-small {
-  font-family: "NeueHaasDisplayRomanItalic";
-}
-.project-card .image-wrapper {
-  position: relative;
-  height: 367px;
-}
-.project-card .image-wrapper .project-status {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-}
-.project-card .image-wrapper .in-progress {
-  width: 109px;
-}
-.project-card .image-wrapper .live {
-  width: 67px;
-}
-.project-card .photo {
-  border-radius: 6px;
-  max-height: 367px;
-  height: 100%;
-  width: 100%;
-}
-.project-card .card-tags-wrapper {
-  padding-top: 20px;
-  display: flex;
-  justify-content: space-between;
-}
-.project-card .card-tags-wrapper .card-tags button {
-  border: none;
-  color: #0C0662;
-  background: var(--secondary-500);
-  border-radius: 100px;
-}
-.project-card .card-tags-wrapper .card-tags button:hover {
-  background: var(--secondary-300);
-}
-.project-card .card-tags-wrapper .card-github {
-  width: 44px;
-  height: 28px;
-  border-radius: 50px;
-  opacity: 0.5;
-  border: 1px solid #68696E;
-  text-align: center;
-  padding-top: 4px;
-  cursor: pointer;
-}
-.project-card .card-tags-wrapper .card-github img {
-  width: 15px;
-}
-.community-cta {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 32px;
-  margin: 80px auto;
-  background: #F2EDDF;
-  border-radius: 24px;
-  padding: 48px 40px 40px;
-  max-width: 1268px;
-  width: 100%;
-  box-sizing: border-box;
-}
-.community-cta h6 {
-  font-size: 28px;
-  margin-top: 65px;
-}
-.community-cta .divider {
-  border: 1px solid #68696E;
-  height: 330px;
-}
-.community-cta .community-card {
-  width: 100%;
-  position: relative;
-}
-.community-cta .community-card .card-header p {
-  font-size: 20px;
-  padding: 12px 0 48px 0;
-}
-.community-cta .community-card .sparc-badge {
-  position: absolute;
-  text-align: center;
-  top: -70px;
-}
-.community-cta .community-card .profile-pics-wrapper {
-  justify-content: center;
-}
-.community-cta .community-card .community-signup p {
-  padding-bottom: 8px;
-}
-.community-cta .community-card .community-signup .community-join {
-  display: flex;
-}
-.community-cta .community-card .community-signup .community-join input {
-  display: block;
-  width: 80%;
-  margin-right: 12px;
-  border: 1px solid rgba(104, 105, 110, 0.5);
-  background: #FFFFFF;
-  color: #68696E;
-  font-family: "NeueHaasDisplayRoman";
-  font-size: 16px;
-  border-radius: 60px;
-  padding: 13.5px 24px;
-}
-.community-cta .community-card .community-signup .community-join a, .community-cta .community-card .community-signup .community-join .btn-large {
-  background: #FF756A;
-  color: white;
-  border: none;
-  border-radius: 100px;
-  padding: 16px 32px;
-}
-.community-cta .community-card .community-signup .community-join .btn-large {
-  height: 48px;
-  width: 94px;
-}
-.community-cta button {
-  display: block;
-  width: 100%;
-  font-family: "NeueHaasDisplayMedium";
-}
-@media only screen and (max-width: 1340px) {
-  .community-cta {
-    width: 80%;
-  }
-}
-@media only screen and (max-width: 760px) {
-  .community-cta {
-    width: 100%;
-    padding: 40px 20px;
-    text-align: center;
-    flex-wrap: wrap;
-  }
-  .community-cta .divider {
-    height: 1px;
-    width: 100%;
-  }
-  .community-cta .community-card {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    padding: 0 40px;
-    border-radius: 24px;
-    background: #F2EDDF;
-  }
-  .community-cta .community-card.right .card-header {
-    padding-top: 65px;
-  }
-  .community-cta .community-card h6 {
-    font-size: 28px;
-    margin-top: 25px;
-  }
-  .community-cta .community-card .card-header {
-    padding-top: 0;
-  }
-  .community-cta .community-card p {
-    font-size: 20px;
-    line-height: 22px;
-  }
-  .community-cta .community-card button {
-    width: 100%;
-    padding: 16px 17px;
-    font-family: "NeueHaasDisplayMedium";
-    font-size: 16px;
-  }
-  .community-cta .community-card .cta-flex {
-    margin-left: 8px;
-    justify-content: flex-start;
-  }
-  .community-cta .community-card .cta-flex .profile-pics-wrapper {
-    width: 100%;
-    justify-content: center;
-  }
-  .community-cta .community-card .sparc-badge {
-    top: -16px;
-  }
-  .community-cta .community-card .community-join input {
-    text-align: left;
-  }
-  .community-cta .community-card .community-join a {
-    margin: 0 auto;
-  }
-  .community-cta .community-card .community-signup {
-    font-size: 16px;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .community-cta {
-    width: 100%;
-  }
-  .community-cta .community-card {
-    padding: 0 17px;
-  }
-  .community-cta .community-card p {
-    font-size: 16px;
-    line-height: 22px;
-  }
-  .community-cta .community-card button {
-    padding: 16px 14px;
-  }
-  .community-cta .community-card.right .card-header {
-    padding-top: 0;
-  }
-  .community-cta .community-card.right h6 {
-    margin-top: 0;
-  }
-  .community-cta .community-card .sparc-badge {
-    position: relative;
-  }
-  .community-cta .community-card .sparc-badge img {
-    height: 100px;
-  }
-  .community-cta .community-card .community-signup {
-    font-size: 16px;
   }
 }
 
@@ -1761,6 +1526,74 @@ body.ibis-translating {
   }
 }
 
+.project-card {
+  margin-bottom: 30px;
+  padding: 0px;
+  max-width: 100%;
+  width: 589px;
+  height: 516px;
+}
+.project-card .card-header {
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 8px;
+  margin-top: 20px;
+}
+.project-card .card-header a {
+  cursor: pointer;
+}
+.project-card .btn-small {
+  font-family: "NeueHaasDisplayRomanItalic";
+}
+.project-card .image-wrapper {
+  position: relative;
+  height: 367px;
+}
+.project-card .image-wrapper .project-status {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+.project-card .image-wrapper .in-progress {
+  width: 109px;
+}
+.project-card .image-wrapper .live {
+  width: 67px;
+}
+.project-card .photo {
+  border-radius: 6px;
+  max-height: 367px;
+  height: 100%;
+  width: 100%;
+}
+.project-card .card-tags-wrapper {
+  padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.project-card .card-tags-wrapper .card-tags button {
+  border: none;
+  color: #0C0662;
+  background: var(--secondary-500);
+  border-radius: 100px;
+}
+.project-card .card-tags-wrapper .card-tags button:hover {
+  background: var(--secondary-300);
+}
+.project-card .card-tags-wrapper .card-github {
+  width: 44px;
+  height: 28px;
+  border-radius: 50px;
+  opacity: 0.5;
+  border: 1px solid #68696E;
+  text-align: center;
+  padding-top: 4px;
+  cursor: pointer;
+}
+.project-card .card-tags-wrapper .card-github img {
+  width: 15px;
+}
 .blog-list-page {
   margin-bottom: 100px;
 }
@@ -1939,6 +1772,173 @@ body.ibis-translating {
   }
   .blog-wrapper .blog-card p {
     text-align: left;
+  }
+}
+
+.community-cta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 32px;
+  margin: 80px auto;
+  background: #F2EDDF;
+  border-radius: 24px;
+  padding: 48px 40px 40px;
+  max-width: 1268px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.community-cta h6 {
+  font-size: 28px;
+  margin-top: 65px;
+}
+.community-cta .divider {
+  border: 1px solid #68696E;
+  height: 330px;
+}
+.community-cta .community-card {
+  width: 100%;
+  position: relative;
+}
+.community-cta .community-card .card-header p {
+  font-size: 20px;
+  padding: 12px 0 48px 0;
+}
+.community-cta .community-card .sparc-badge {
+  position: absolute;
+  text-align: center;
+  top: -70px;
+}
+.community-cta .community-card .profile-pics-wrapper {
+  justify-content: center;
+}
+.community-cta .community-card .community-signup p {
+  padding-bottom: 8px;
+}
+.community-cta .community-card .community-signup .community-join {
+  display: flex;
+}
+.community-cta .community-card .community-signup .community-join input {
+  display: block;
+  width: 80%;
+  margin-right: 12px;
+  border: 1px solid rgba(104, 105, 110, 0.5);
+  background: #FFFFFF;
+  color: #68696E;
+  font-family: "NeueHaasDisplayRoman";
+  font-size: 16px;
+  border-radius: 60px;
+  padding: 13.5px 24px;
+}
+.community-cta .community-card .community-signup .community-join a, .community-cta .community-card .community-signup .community-join .btn-large {
+  background: #FF756A;
+  color: white;
+  border: none;
+  border-radius: 100px;
+  padding: 16px 32px;
+}
+.community-cta .community-card .community-signup .community-join .btn-large {
+  height: 48px;
+  width: 94px;
+}
+.community-cta button {
+  display: block;
+  width: 100%;
+  font-family: "NeueHaasDisplayMedium";
+}
+@media only screen and (max-width: 1340px) {
+  .community-cta {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 760px) {
+  .community-cta {
+    width: 100%;
+    padding: 40px 20px;
+    text-align: center;
+    flex-wrap: wrap;
+  }
+  .community-cta .divider {
+    height: 1px;
+    width: 100%;
+  }
+  .community-cta .community-card {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0 40px;
+    border-radius: 24px;
+    background: #F2EDDF;
+  }
+  .community-cta .community-card.right .card-header {
+    padding-top: 65px;
+  }
+  .community-cta .community-card h6 {
+    font-size: 28px;
+    margin-top: 25px;
+  }
+  .community-cta .community-card .card-header {
+    padding-top: 0;
+  }
+  .community-cta .community-card p {
+    font-size: 20px;
+    line-height: 22px;
+  }
+  .community-cta .community-card button {
+    width: 100%;
+    padding: 16px 17px;
+    font-family: "NeueHaasDisplayMedium";
+    font-size: 16px;
+  }
+  .community-cta .community-card .cta-flex {
+    margin-left: 8px;
+    justify-content: flex-start;
+  }
+  .community-cta .community-card .cta-flex .profile-pics-wrapper {
+    width: 100%;
+    justify-content: center;
+  }
+  .community-cta .community-card .sparc-badge {
+    top: -16px;
+  }
+  .community-cta .community-card .community-join input {
+    text-align: left;
+  }
+  .community-cta .community-card .community-join a {
+    margin: 0 auto;
+  }
+  .community-cta .community-card .community-signup {
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .community-cta {
+    width: 100%;
+  }
+  .community-cta .community-card {
+    padding: 0 17px;
+  }
+  .community-cta .community-card p {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .community-cta .community-card button {
+    padding: 16px 14px;
+  }
+  .community-cta .community-card.right .card-header {
+    padding-top: 0;
+  }
+  .community-cta .community-card.right h6 {
+    margin-top: 0;
+  }
+  .community-cta .community-card .sparc-badge {
+    position: relative;
+  }
+  .community-cta .community-card .sparc-badge img {
+    height: 100px;
+  }
+  .community-cta .community-card .community-signup {
+    font-size: 16px;
   }
 }
 
