Updates for the mobile menu

--- a/SparcFeatures/Pages/Index.scss
+++ b/SparcFeatures/Pages/Index.scss
@@ -285,7 +285,6 @@ body.ibis-translating {
     }
 
     @media only screen and (max-width: 760px) {
-        margin-top: 63px;
 
         section {
             padding: 64px 0 0 0;
@@ -447,7 +446,7 @@ body.ibis-translating {
     }
 
     @media only screen and (max-width: 600px) {
-        .cta-box .cta-flex {
+        .home-hero .cta-box .cta-flex {
             input {
                 width: 100%;
             }
