--- a/SparcFeatures/Shared/NavMenu.scss
+++ b/SparcFeatures/Shared/NavMenu.scss
@@ -35,45 +35,45 @@ nav {
             padding: 10px;
             cursor: pointer;
         }
+    }
 
-        .community-join {
-            width: 148px;
+    .community-join {
+        width: 148px;
 
-            > div {
-                position: absolute;
-                width: 435px;
-                right: 48px;
-                top: 34px;
+        > div {
+            position: absolute;
+            width: 435px;
+            right: 48px;
+            top: 34px;
+        }
+
+        .toggle {
+            display: none;
+
+            &-show {
+                display: block;
             }
+        }
 
-            .toggle {
-                display: none;
+        input {
+            width: 280px;
+            height: 34px;
+            border-radius: 40px;
+            background: $white;
+            padding: 9px 24px;
+            margin-right: 6px;
+            border: 1px solid $grey-100;
+        }
 
-                &-show {
-                    display: block;
-                }
-            }
-
-            input {
-                width: 280px;
-                height: 34px;
-                border-radius: 40px;
-                background: $white;
-                padding: 9px 24px;
-                margin-right: 6px;
-                border: 1px solid $grey-100;
-            }
-
-            button {
-                border-radius: 50px;
-                padding: 10px 24px;
-                background: $peach-500;
-                border: none;
-                font-family: 'NeueHaasDisplayMedium';
-                font-size: 14px;
-                font-style: normal;
-                text-align: center;
-            }
+        button {
+            border-radius: 50px;
+            padding: 10px 24px;
+            background: $peach-500;
+            border: none;
+            font-family: 'NeueHaasDisplayMedium';
+            font-size: 14px;
+            font-style: normal;
+            text-align: center;
         }
     }
     //mobile menu
@@ -99,93 +99,21 @@ nav {
 
         .menu-toggle {
             display: inline-block;
-            position: absolute;
+            position: fixed;
             top: 20px;
             right: 25px;
             z-index: 60;
         }
 
-        input.menu-toggle {
-            display: none;
-
-            &:not(:checked) {
-                background: $yellow-100;
-
-                & ~ label {
-                    position: fixed;
-                }
-
-                & ~ label span:last-child {
-                    display: none;
-                }
-
-                & ~ .nav-mobile {
-                    width: 100vw;
-                    background: $yellow-100;
-                    position: fixed;
-                    z-index: 20;
-
-                    .menu {
-                        display: none;
-                    }
-
-                    .community-join {
-                        display: none;
-
-                        button {
-                            display: none;
-                        }
-                    }
-                }
-            }
-
-            &:checked {
-                background: $white;
-
-                & ~ label {
-                    position: fixed;
-                    z-index: 60;
-                }
-
-                & ~ label span:first-child {
-                    display: none;
-                }
-
-                & ~ .nav-mobile {
-                    position: fixed;
-                    overflow: hidden;
-                    width: 100vw;
-                    height: calc(100vh - 96px);
-
-                    .menu {
-                        display: block;
-                        overflow: scroll;
-                        height: 100%;
-                    }
-
-                    .community-join {
-                        background: $yellow-100;
-                        overflow: hidden;
-                        padding: 70px 20px;
-                    }
-                }
-            }
-        }
-
-        label.menu-toggle {
-            background: transparent;
-
-            i {
-                font-size: 20px;
-            }
-        }
-
         .nav-mobile {
+            width: 100vw;
             display: block;
             align-items: center;
             background: $yellow-100;
             z-index: 50;
             overflow: hidden;
+            position: fixed;
+            z-index: 1;
 
             .logo {
                 padding: 18px 25px;
@@ -197,15 +125,15 @@ nav {
                 }
             }
 
+            .hide-menu {
+                display: none;
+            }
+
             .menu {
                 width: 100vw;
                 padding: 96px 0;
                 background: $yellow-100;
                 text-align: center;
-
-                &.hide-menu {
-                    display: none;
-                }
 
                 li {
                     margin-bottom: 100px;
@@ -220,7 +148,7 @@ nav {
             .community-join {
                 overflow: hidden;
                 width: 100vw;
-                padding: 25px 18px;
+                padding: 90px 18px;
                 background: $yellow-100;
                 display: flex;
                 gap: 15px;
@@ -229,6 +157,21 @@ nav {
                 position: fixed;
                 bottom: 0;
                 text-align: center;
+
+                > div {
+                    position: relative;
+                    width: 100%;
+                    right: unset;
+                    top: unset;
+                }
+
+                input {
+                    display: block;
+                    width: 100%;
+                    height: 44px;
+                    margin-bottom: 20px;
+                    text-align: left;
+                }
 
                 button {
                     padding: 10px 24px;
