Change project channel for a clean slate

--- a/SparcFeatures/Shared/MainLayout.razor
+++ b/SparcFeatures/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<IbisTranslate ChannelId="sparc-landing-page">
+<IbisTranslate ChannelId="sparc-coop">
     <div class="page">
         <NavMenu />
         <main>
